force-app/main/default/objects/copado__Environment__c/fields/copado__Promotion_Default_Credential__c.field-meta.xml
<CustomField>
    <fullName>copado__Promotion_Default_Credential__c</fullName>
    <inlineHelpText>The Default Credential for the target Org is always selected by default. Optionally, the Default Credential can be selected only if the user has no Org Credential for the target Org.</inlineHelpText>
    <label>Promotion Default Credential</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All Promotions</fullName>
                <default>true</default>
                <label>All Promotions</label>
            </value>
            <value>
                <fullName>Only If User Has No Org Credential</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>