force-app/main/default/objects/copado__Environment__c/fields/copado__Run_all_tests__c.field-meta.xml
<CustomField>
    <fullName>copado__Run_all_tests__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected, &quot;Run all tests&quot; will be enforced when deploying to this environment.</inlineHelpText>
    <label>Run all local tests</label>
    <type>Checkbox</type>
</CustomField>